bk_ida/gccida/g2/record_one_set
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1696:1: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_0 **v7; // rax 
^~~~~~~~~
reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1696:13: error: use of undeclared identifier 'v7'
reg_set_0 **v7; // rax 
            ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1700:31: error: expected expression
reg_set_table = ( reg_set_0 **)xrealloc( reg_set_table, ( unsigned int)( 8 * ( regno + 100))); 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1700:19: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
reg_set_table = ( reg_set_0 **)xrealloc( reg_set_table, ( unsigned int)( 8 * ( regno + 100))); 
                  ^~~~~~~~~
                  reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1735:1: error: use of undeclared identifier 'v7'
v7 = &reg_set_table[regno]; 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1737:28: error: use of undeclared identifier 'v7'
*( _QWORD *)object_base = *v7; 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1738:20: error: expected expression
*v7 = ( reg_set_0 *)object_base; 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1738:9: error: use of undeclared identifier 'reg_set_0'; did you mean 'reg_set_p'?
*v7 = ( reg_set_0 *)object_base; 
        ^~~~~~~~~
        reg_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/rtl.h:1469:12: note: 'reg_set_p' declared here
extern int reg_set_p                    PARAMS ((rtx, rtx));
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/gcse.c:1738:2: error: use of undeclared identifier 'v7'
*v7 = ( reg_set_0 *)object_base; 
 ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/record_one_set/src/obj/gcse.o] Error 1
